syntax = "proto3";

package rpc_passmgr;

service RpcPassmgr {
  rpc Register (RegisterRequest) returns (RegisterResponse);

  
  rpc GetList (GetListRequest) returns (RecordListResponse);
  rpc GetAll (GetAllRequest) returns (RecordsResponse);
  rpc GetById (GetByIdRequest) returns (OneRecordResponse);
  rpc GetNonce (GetNonceRequest) returns (GetNonceResponse);

  rpc DeleteAll (DeleteAllRequest) returns (DeleteResponse);
  rpc DeleteById (DeleteByIdRequest) returns (DeleteResponse);
  
  rpc SetOne (SetOneRequest) returns (SetOneResponse);
  rpc SetRecords (SetRecordsRequest) returns (SetRecordsResponse);
}

message RegisterRequest {
  bytes user_id = 1;
  bytes pub_key = 3;
}

message RegisterResponse {
  bool success = 1;
  uint64 nonce = 2;
}

// The AuthSignature message is used for all authenticated requests
message AuthSignature {
  bytes user_id = 1;
  uint64 nonce = 2;
  bytes signature = 3;      // Dilithium signature of [nonce || request_data]
}

message GetNonceRequest {
  bytes user_id = 1;
}

message GetNonceResponse {
  uint64 nonce = 1;
}

message GetListRequest {
  AuthSignature auth = 1;
}

message GetAllRequest {
  AuthSignature auth = 1;
}

message GetByIdRequest {
  AuthSignature auth = 1;
  uint64 cipher_record_id = 2;
}

message Record {
  uint64 id = 1;
  uint64 ver = 2;
  bytes user_id = 3;
  bytes data = 4;
}

message RecordID {
  uint64 id = 1;
  uint64 ver = 2;
  bytes user_id = 3;
}

message RecordListResponse {
  repeated RecordID recordIDs = 1;
}

message RecordsResponse {
  repeated Record records = 1;
}

message OneRecordResponse {
  Record record = 1;
}

message DeleteAllRequest {
  AuthSignature auth = 1;
}

message DeleteByIdRequest {
  AuthSignature auth = 1;
  uint64 record_id = 2;
}

message DeleteResponse {}

message SetOneRequest {
  AuthSignature auth = 1;
  Record record = 2;
}

message SetOneResponse {}

message SetRecordsRequest {
  AuthSignature auth = 1;
  repeated Record records = 2;
}

message SetRecordsResponse {}